# protos

./: CMakeLists.txt  README.md  compile_protos.sh  ggg_template_server.proto  ggg_test_server.proto  ssz_weixin_open_server.pb.cc  ssz_weixin_open_server.pb.h  ssz_weixin_open_server.proto  ssz_weixin_open_server.trpc.pb.cc  ssz_weixin_open_server.trpc.pb.h  trpc_sample_server.pb.cc  trpc_sample_server.pb.h  trpc_sample_server.proto  trpc_sample_server.trpc.pb.cc  trpc_sample_server.trpc.pb.h  trpc_template_server.pb.cc  trpc_template_server.pb.h  trpc_template_server.proto  trpc_template_server.trpc.pb.cc  trpc_template_server.trpc.pb.h
protos_pkg/: ggg_template_server.grpc.pb.cc  ggg_template_server.grpc.pb.h  ggg_template_server.pb.cc  ggg_template_server.pb.h  ggg_test_server.grpc.pb.cc  ggg_test_server.grpc.pb.h  ggg_test_server.pb.cc  ggg_test_server.pb.h
